my-first-pod.yaml
# my-first-pod.yaml
apiVersion: v1
kind: Pod
metadata: 
  name: my-pod
  labels:
    app: webserver
spec:
  containers:
  - name: pod-demo
    image: joshhsieh/docker-demo
    ports:
    - containerPort: 3000
