test-simple.yaml
# test-simple.yaml

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-deployment-nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: test-container-nginx
        image: nginx
        ports:
        - containerPort: 80
