test-service.yaml
# test-service.yaml

---
apiVersion: v1
kind: Service
metadata:
  name: test-service-web
spec:
  type: NodePort
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
